:gear: Update apr.yml

--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -13,4 +13,6 @@ jobs:
     
     steps:
     - name: Run Git CLI for Pull Request
-      run: git pull
+      run: |
+        cd /var/www/Test
+        git pull
