:gear: Update apr.yml

--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -1,5 +1,3 @@
-# File: .repository/workflows/apr.yml
-
 on:
   push:
     branches:
@@ -8,11 +6,18 @@ on:
   
 jobs:
   run_pull:
-    name: run automatic pull request
+    name: run pull
     runs-on: ubuntu-latest
     
     steps:
-    - name: Run Git CLI for Pull Request
+    - name: install ssh keys
+      # check this thread to understand why its needed:
+      # https://stackoverflow.com/a/70447517
       run: |
-        cd /var/www/Test
-        git pull
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+    - name: connect and pull
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
+    - name: cleanup
+      run: rm -rf ~/.ssh
