--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -9,19 +9,5 @@ jobs:
     name: Run Pull
     runs-on: ubuntu-latest
     steps:
-    - name: Setup SSH Keys
-      # check this thread to understand why its needed:
-      # https://stackoverflow.com/a/70447517
-      run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-    - name: Connect to Server and Pull
-      run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
-        cd ${{ secrets.WORK_DIR }}
-        git checkout ${{ secrets.MAIN_BRANCH }}
-        git pull
-        exit
     - name: Cleanup
-      run: rm -rf ~/.ssh
+      run: echo ${{ secrets.SSH_HOST }}
