--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -10,5 +10,19 @@ jobs:
     environment: Test_Environment
     runs-on: ubuntu-latest
     steps:
-    - name: Cleanup
-      run: echo ${{ secrets.SSH_HOST }}
+    - name: Install SSH Keys
+      # check this thread to understand why its needed:
+      # https://stackoverflow.com/a/70447517
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+    - name: Connect and Pull
+      run: |
+        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+        cd ${{ secrets.WORK_DIR }}
+        git checkout ${{ secrets.MAIN_BRANCH }}
+        git pull
+        exit
+    - name: cleanup
+      run: rm -rf ~/.ssh
