--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+        echo ${{ secrets.SSH_PUBLIC_KEY }} > ~/.ssh/known_hosts
     - name: Connect and Pull
       run: |
         ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
