--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -19,7 +19,7 @@ jobs:
         echo ${{ secrets.SSH_PUBLIC_KEY }} > ~/.ssh/known_hosts
     - name: Connect and Pull
       run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
         cd ${{ secrets.WORK_DIR }}
         git checkout ${{ secrets.MAIN_BRANCH }}
         git pull
