--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+        echo "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts
     - name: Install Cloudflared
       run: |
         echo pwd
@@ -24,7 +24,7 @@ jobs:
         dpkg -i cloudflared-linux-amd64.deb
     - name: Connect and Pull
       run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_PUBLIC_HOST_NAME }}
         cd ${{ secrets.WORK_DIR }}
         git checkout ${{ secrets.MAIN_BRANCH }}
         git pull
