--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -19,9 +19,9 @@ jobs:
         echo "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts
     - name: Install Cloudflared
       run: |
-        echo pwd
+        pwd
         wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
-        dpkg -i cloudflared-linux-amd64.deb
+        sudo dpkg -i cloudflared-linux-amd64.deb
     - name: Connect and Pull
       run: |
         ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_PUBLIC_HOST_NAME }}
