--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        echo -e "Host ${{ SSH_PUBLIC_HOST_NAME }}\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
+        echo -e "Host ${{ secrets.SSH_PUBLIC_HOST_NAME }}\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
     - name: Connect and Pull
       run: |
         ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_PUBLIC_HOST_NAME }}
