--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -19,10 +19,10 @@ jobs:
       run: |
         wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        echo -e "Host ${{ secrets.SSH_PUBLIC_HOST_NAME }}\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
+        echo -e "Host ssh.suzuqui.live\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
     - name: Connect and Pull
       run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_PUBLIC_HOST_NAME }}
+        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@ssh.suzuqui.live
         cd ${{ secrets.WORK_DIR }}
         git checkout ${{ secrets.MAIN_BRANCH }}
         git pull
