--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -30,7 +30,7 @@ jobs:
         echo -e "Host ssh.suzuqui.live\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
     - name: Connect and Pull
       run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@ssh.suzuqui.live
+        ssh -i ~/.ssh/id_rsa vandre@ssh.suzuqui.live
         cd ${{ secrets.WORK_DIR }}
         git checkout ${{ secrets.MAIN_BRANCH }}
         git pull
