--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -12,8 +12,9 @@ jobs:
     steps:
     - name: Setup SSH Client
       run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        sudo apt install openssh-server -y
+        ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa_github
         echo "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts
         sudo sed -i '/#Port 22/c Port 22' /etc/ssh/sshd_config;
         sudo sed -i '/#AddressFamily any/c AddressFamily any' /etc/ssh/sshd_config;
