--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -14,15 +14,15 @@ jobs:
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts
+        echo "${{ secrets.SERVER_HOST }}" > ~/.ssh/known_hosts
     - name: Setup Cloudflared
       run: |
         wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        echo -e "Host ssh.suzuqui.live\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
+        echo -e "Host ${{ secrets.SSH_HOST_NAME }}\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
     - name: Connect and Pull
       run: |
-        ssh -i ~/.ssh/id_rsa vandre@ssh.suzuqui.live \
+        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.HOST_NAME }} \
         "cd /var/www/Test; \
         ls -la; \
         exit"
