--- a/.github/workflows/apr.yml
+++ b/.github/workflows/apr.yml
@@ -22,7 +22,7 @@ jobs:
         echo -e "Host ${{ secrets.SSH_HOST_NAME }}\nProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h" > ~/.ssh/config
     - name: Connect and Pull
       run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.HOST_NAME }} \
+        ssh -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_NAME }} \
         "cd /var/www/Test; \
         ls -la; \
         exit"
